Fix weird code.command spacing.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -373,13 +373,13 @@ h3 {
 
 .command {
   /*background-color: #eee;*/
-  border-radius: 2px;
+  /*border-radius: 2px;*/
   color: #900c3f;
-  display: inline-block;
+  /*display: inline-block;*/
   font-size: 1.2rem;
   font-weight: bold;
-  margin-bottom: 20px;
-  padding: 0.2rem;
+  /*margin-bottom: 20px;*/
+  /*padding: 0.2rem;*/
 }
 
 #list-command code {
